Change in the way of defining the state of components: from connect to signalSlice